    - Add translation for label "RDP port:". Update "ts" files updated
      Russian translation.
    - Add translation for checkbox "Direct RDP Connection" and update Russian
      and German translation.
    - Restart pulse server on windows if it crashed.
    - Show "Advanced Options" button only if RDP session chosen
    - Fixing kbd focus issue for all kinds of sessions in thinclient mode 

  [ Ricardo Diaz ]
  * New upstream version (3.99.3.0):
    - Add Spanish translation file.

 -- Oleksandr Shneyder <oleksandr.shneyder@obviously-nice.de>  Wed, 05 Sep 2012 11:40:47 +0200

x2goclient (3.99.2.2-0~x2go2) unstable; urgency=low

  * Add Conflicts/Replaces for x2goclient-gtk.

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Mon, 20 Aug 2012 09:58:47 +0200

x2goclient (3.99.2.2-0~x2go1) unstable; urgency=low

  [ Mike Gabriel ]
  * New upstream version (3.99.2.2):
    - Drop Encoding key from .desktop file (as it is deprecated
      according to latest FreeDesktop.org specs).
    - Correct spelling for mis-spelled work ,,authentication''.
    - Allow QMAKE_* parameters that are needed for hardening x2goclient
      (see http://wiki.debian.org/Hardening).
    - Provide CPPFLAGS for QMAKE_CFLAGS _and_ QMAKE_CXXFLAGS. Provide them as
      first build parameters.
    - Allow x2goclient to connect to user accounts that have other shells than
      /bin/sh and alike configured as default shell. Also: removal bashisms in
      shell execution commands.
    - X2Go resume session slot: double click on a selected session is supposed
      to resume that session. To make this feature functional for running
      sessions the session has to be suspended first.

  [ Oleksandr Shneyder ]
  * New upstream version (3.99.2.2):
    - Fixing X2Go Plugin
    - Cleaning code: double click on running session. Instead of using function
      "sleep" starting resume-session after suspend-session is returned.
