@@ -53,6 +53,7 @@ x2goclient (3.99.3.0-0~x2go1) UNRELEASED; urgency=low
     - Restart pulse server on windows if it crashed.
     - Show "Advanced Options" button only if RDP session chosen
     - Fixing kbd focus issue for all kinds of sessions in thinclient mode 
+    - Add command line parameter --ssh-key and --autologin 
 
   [ Ricardo Diaz ]
   * New upstream version (3.99.3.0):
